# pyproject.toml
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=58", "setuptools_scm[toml]>=6.2", "wheel"]

[project]
name = "pyspex"
dynamic = ["version"]
description = "Software package to handle SPEXone Level-0 and Level-1 data"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Richard van Hees", email = "r.m.van.hees@sron.nl"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

requires-python = ">=3.8"
dependencies = [
  "importlib-resources>5.8; python_version=='3.8'",
  "h5py>=3.8",
  "julian",
  "moniplot>=0.5.8",
  "netCDF4>=1.5.7",
  "numpy>=1.19",
  "openpyxl>=3",
  "pyYAML>=6.0",
  "xarray>=2022.3",
]

[project.scripts]
spx1_level01a = "pyspex.gen_l1a.cli:main"

[project.urls]
homepage = "https://github.com/rmvanhees/pyspex"
documentation = "https://pyspex.readthedocs.io/en/latest/"
# Source = "https://github.com/rmvanhees/pyspex"
# Changelog = ""
"Issue tracker" = "https://github.com/rmvanhees/pyspex/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.dat", "*.yaml"]

[tool.setuptools_scm]

[tool.ruff]
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "NPY", # NumPy-specific rules
]
# ignore = ["D205"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.flake8-quotes]
inline-quotes = "single"