# pyproject.toml
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  'importlib-resources; python_version < "3.10"',
  "setuptools>=58",
  "setuptools_scm>=6.2",
  'tomli>=1; python_version < "3.11"',
  'typing-extensions; python_version < "3.11"',
  "wheel",
]

[project]
name = "pyspex"
description = "Software package to handle SPEXone Level-0 and Level-1 data"
readme = "README.md"
license.file = "LICENSE"
authors = [
  {name = "Richard van Hees", email = "r.m.van.hees@sron.nl"}
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dynamic = [
  "version",
]
dependencies = [
  'importlib-resources; python_version < "3.10"',
  "h5py>=3.8",
  "julian",
  "moniplot>=0.5.8",
  "netCDF4>=1.5.7",
  "numpy>=1.19",
  "openpyxl>=3",
  "pyYAML>=6.0",
  "xarray>=2022.3",
  'tomli>=1; python_version < "3.11"',
  'typing-extensions; python_version < "3.11"',
]

[project.scripts]
spx1_level01a = "pyspex.gen_l1a.cli:main"

[project.urls]
homepage = "https://github.com/rmvanhees/pyspex"
documentation = "https://pyspex.readthedocs.io/en/latest/"
# Source = "https://github.com/rmvanhees/pyspex"
# Changelog = ""
"Issue tracker" = "https://github.com/rmvanhees/pyspex/issues"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"pyspex.data" = [
	"*.dat",
	"*.yaml",
	"*.nc"
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "D",   # pydocstyle
  "E",   # pycodestyle
  "W",   # pycodestyle
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "NPY", # NumPy-specific rules
]
ignore = ["D203", "D213", "Q000", "Q003"]

[tool.ruff.lint.per-file-ignores]
"scripts/l1agen_spex.py" = ["UP017"]

[lint.pydocstyle]
convention = "pep257"
