# pyproject.toml
[build-system]
requires = [
   "hatchling",
   "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "pyspex"
description = "Software package to handle SPEXone Level-0 and Level-1 data"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  {name = "Richard van Hees", email = "r.m.van.hees@sron.nl"}
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dynamic = [
  "version",
]
dependencies = [
  "typing-extensions; python_version<'3.11'",
  "h5py>=3.9",
  "h5yaml>=0.1.0; python_version>='3.10'",
  "julian",
  "netCDF4>=1.7",
  "numpy>=1.19; python_version<'3.10'",
  "numpy>=2.0; python_version>='3.10'",
  "openpyxl>=3.0",
  "pyxarr>=0.3.0; python_version>='3.10'",
  "PyYAML>=6.0",
  "xarray>=2024",
]

[project.scripts]
spx1_level01a = "pyspex.gen_l1a.cli:main"
spx1_add_egse2l1a = "pyspex.scripts.spx1_add_egse2l1a:main"
spx1_add_ogse2l1a = "pyspex.scripts.spx1_add_ogse2l1a:main"
spx1_ccsds2l1a = "pyspex.scripts.spx1_ccsds2l1a:main"
spx1_csv2bin_tbl = "pyspex.scripts.spx1_csv2bin_tbl:main"
spx1_dem2l1a = "pyspex.scripts.spx1_dem2l1a:main"
spx1_quicklook_lite = "pyspex.scripts.spx1_quicklook_lite:main"


[project.urls]
Homepage = "https://github.com/rmvanhees/pyspex"
Source = "https://github.com/rmvanhees/pyspex"
Issues = "https://github.com/rmvanhees/pyspex/issues"
Documentation = "https://pyspex.readthedocs.io/en/stable/"
# Changelog = ""

[tool.hatch.build.targets.sdist]
exclude = [
   "src/pyspex/data/*.xls",
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "W",    # pycodestyle
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "ISC",  # flake8-implicit-str-concat
  "PGH",  # flake8-pie
  "PYI",  # flake8-pyi
  "Q",    # flake8-quotes
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "TCH",  # flake8-type-checking
  "NPY",  # NumPy-specific
  "PERF", # Perflint
  "RUF",  # Ruff Specific
  "UP",   # pyupgrade
]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"scripts/l1agen_spex.py" = ["B905", "UP017", "UP035"]

[lint.pydocstyle]
convention = "pep257"
