[metadata]
name = pyspex
description = Software package to access SPEXone Level-1 products
license = BSD 3-Clause License
license_file = LICENSE
long_description = file:README.md
url = https://github.com/rmvanhees/pyspex.git
author = Richard van Hees
author_email = r.m.van.hees@sron.nl
maintainer = Richard van Hees
maintainer_email = r.m.van.hees@sron.nl
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science


[options]
zip_safe = False
package_dir =
   =src
packages = find:
scripts =
    scripts/spx1_ccsds2l1a.py
    scripts/spx1_cre_orbit_l1a.py
    scripts/spx1_csv2bin_tbl.py
    scripts/spx1_dem2l1a.py
    scripts/spx1_l1a_select.py
    scripts/spx1_l1b_select.py
    scripts/spx1_l1c_select.py
    scripts/spx1_tif2l1a.py
    scripts/spx1_quicklook_lite.py
install_requires =
    numpy>=1.19
    xarray>=0.20
    h5py>=3.5
    netCDF4>=1.5
    moniplot>=0.2
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
toml = toml