[options]
scripts =
    scripts/spx1_add_egse2l1a.py
    scripts/spx1_add_ogse2l1a.py
    scripts/spx1_ccsds2l1a.py
    scripts/spx1_csv2bin_tbl.py
    scripts/spx1_dem2l1a.py
    scripts/spx1_quicklook_lite.py

[options.package_data]
"pyspex.data" =
    *.dat

[options.extras_require]
toml = toml

[flake8]
max-line-length=80
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    pilots,
    dist
